--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -206,7 +206,7 @@
 <!-- Herramientas Section -->
 <section class="py-5 bg-dark">
     <div class="container">
-        <h2 class="text-center mb-5">Herramientas que Dominamos</h2>
+        <h2 class="text-center mb-5">Algunas de las Herramientas que Dominamos</h2>
         <div class="row">
             <!-- 6 columnas col-md-4 col-lg-2 con class="card" -->
             <div class="col-lg-2">
@@ -225,6 +225,24 @@
                 <div class="feature-box text-center">
                     <div class="feature-icon"><i class="fa-brands fa-js" style="color: #f7df1e;"></i></div>
                     <h3>JavaScript</h3>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div class="feature-box text-center">
+                    <div class="feature-icon"><i class="fa-brands fa-git-alt" style="color: #f05032;"></i></div>
+                    <h3>Git</h3>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div class="feature-box text-center">
+                    <div class="feature-icon"><i class="fa-solid fa-database" style="color: #fc00ef;"></i></i></div>
+                    <h3>SQL</h3>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div class="feature-box text-center">
+                    <div class="feature-icon"><i class="fa-brands fa-html5" style="color: #e34c26;"></i></div>
+                    <h3>HTML</h3>
                 </div>
             </div>
         </div>
