--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -54,6 +54,7 @@
                 <div class="col-md-6">
                     <h5>S.O.S Software</h5>
                     <p>Soluciones Oportunas en Software</p>
+                    <p>Cali - Colombia</p>
                 </div>
                 <div class="col-md-6 text-md-end">
                     <p>&copy; {% now "Y" %} S.O.S Software. Todos los derechos reservados.</p>
