--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -121,7 +121,10 @@
         <div class="row align-items-center">
             <div class="col-lg-6">
                 <h1 class="display-4 fw-bold">Bienvenido a S.O.S Software</h1>
-                <p class="lead">Tu solución integral para gestión de software y servicios tecnológicos.</p>
+                <p class="lead">Somos una Startup caleña comprometida con la seguridad y la eficiencia en el mundo digital con software a la medida. 
+                    Ofrecemos soluciones innovadoras para proteger tu infraestructura tecnológica y optimizar tus procesos.
+                    Nuestro objetivo es brindarte la mejor experiencia posible porque sabemos que al igual que nosotros, crees en la tecnología y en su poder transformador.
+                </p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                     <!-- <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Comenzar</button> -->
                     <button type="button" class="btn btn-outline-secondary btn-lg px-4">Más información</button>
@@ -312,6 +315,8 @@
         <div class="text-center">
             <!-- enlaces a redes sociales -->
             <a href="https://www.linkedin.com/company/sos-software-latam/about/" target="_blank"><i class="fab fa-linkedin fa-4x"></i></a>
+            <a href="https://www.instagram.com/sosoftware1.0?igsh=MTViZjV6M3poaWNoaQ==" target="_blank"><i class="fab fa-instagram fa-4x"></i></a>
+            
         </div>  
     </div>
 </section>
