pequeños cambios de iconos

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -127,7 +127,7 @@
                 </p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                     <!-- <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Comenzar</button> -->
-                    <button type="button" class="btn btn-outline-secondary btn-lg px-4">Más información</button>
+                    <!-- <button type="button" class="btn btn-outline-secondary btn-lg px-4">Más información</button> -->
                 </div>
             </div>
             <div class="col-lg-6">
@@ -329,6 +329,7 @@
             <p class="lead">Contáctanos hoy mismo para una consulta gratuita</p>
             <button id="contact-btn" class="btn btn-light btn-lg">Contactar ahora</button>
         </div>
+        
         <!-- Mensajes de Django -->
         {% if messages %}
             <div class="mt-3">
