--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}S.O.S Software{% endblock %}</title>
+    <link rel="icon" href="static\img\SOSoftware.svg" type="image/svg">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome (versión free) -->
